Improve and clean up mixins where possible for better mod compatibility