@@ -1,5 +1,7 @@
 package svenhjol.charm.charmony.common.mixin.event.smithing_table;
 
+import com.llamalad7.mixinextras.injector.ModifyReturnValue;
+import com.llamalad7.mixinextras.sugar.Local;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.crafting.Ingredient;
 import net.minecraft.world.item.crafting.SmithingTransformRecipe;
@@ -8,8 +10,6 @@ import org.spongepowered.asm.mixin.Mixin;
 import org.spongepowered.asm.mixin.Shadow;
 import org.spongepowered.asm.mixin.Unique;
 import org.spongepowered.asm.mixin.injection.At;
-import org.spongepowered.asm.mixin.injection.Inject;
-import org.spongepowered.asm.mixin.injection.callback.CallbackInfoReturnable;
 import svenhjol.charm.charmony.event.SmithingTableEvents;
 
 import java.util.List;
@@ -20,37 +20,37 @@ public class SmithingTransformRecipeMixin {
     @Shadow @Final
     Ingredient template;
 
-    @Inject(
-        method = "isTemplateIngredient",
-        at = @At("HEAD"),
-        cancellable = true
+    @ModifyReturnValue(
+            method = "isTemplateIngredient",
+            at = @At("RETURN")
     )
-    private void hookIsTemplateIngredient(ItemStack stack, CallbackInfoReturnable<Boolean> cir) {
+    private boolean hookIsTemplateIngredient(boolean original, @Local(argsOnly = true) ItemStack stack) {
         if (SmithingTableEvents.VALIDATE_TEMPLATE.invoke(stack)) {
-            cir.setReturnValue(true);
+            return true;
         }
+        return original;
     }
 
-    @Inject(
-        method = "isBaseIngredient",
-        at = @At("HEAD"),
-        cancellable = true
+    @ModifyReturnValue(
+            method = "isBaseIngredient",
+            at = @At("RETURN")
     )
-    private void hookIsBaseIngredient(ItemStack stack, CallbackInfoReturnable<Boolean> cir) {
+    private boolean hookIsBaseIngredient(boolean original, @Local(argsOnly = true) ItemStack stack) {
         if (SmithingTableEvents.CAN_PLACE.invoke(getTemplate(), 1, stack)) {
-            cir.setReturnValue(true);
+            return true;
         }
+        return original;
     }
 
-    @Inject(
-        method = "isAdditionIngredient",
-        at = @At("HEAD"),
-        cancellable = true
+    @ModifyReturnValue(
+            method = "isAdditionIngredient",
+            at = @At("RETURN")
     )
-    private void hookIsAdditionIngredient(ItemStack stack, CallbackInfoReturnable<Boolean> cir) {
+    private boolean hookIsAdditionIngredient(boolean original, @Local(argsOnly = true) ItemStack stack) {
         if (SmithingTableEvents.CAN_PLACE.invoke(getTemplate(), 2, stack)) {
-            cir.setReturnValue(true);
+            return true;
         }
+        return original;
     }
 
     @Unique
@@ -59,6 +59,6 @@ public class SmithingTransformRecipeMixin {
         if (items.isEmpty()) {
             return ItemStack.EMPTY;
         }
-        return items.get(0);
+        return items.getFirst();
     }
 }
